[gd_scene load_steps=8 format=2]

[ext_resource path="res://NPCs/BobTrufaunt/bobTportrait.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Onett.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/DialogBox/DialogFrame.png" type="Texture" id=4]
[ext_resource path="res://UI/keyPress/keyPress.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/DialogBox/DialogFrame.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="DialogFrame" type="Node2D"]
script = ExtResource( 6 )

[node name="Frame" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="SpeakerPicture" type="TextureRect" parent="."]
margin_left = -126.0
margin_top = -30.0
margin_right = -64.0
margin_bottom = 30.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerName" type="Label" parent="."]
margin_left = -56.0
margin_top = -36.0
margin_right = 74.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 2 )
text = "Mayor Bob"

[node name="SpeakerWords" type="Label" parent="."]
margin_left = -56.0
margin_top = -8.0
margin_right = 112.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "You sir! Please, you must help save the town!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="keyPresser" parent="." instance=ExtResource( 5 )]
position = Vector2( 152, 0 )

[node name="CharTimer" type="Timer" parent="."]

[connection signal="timeout" from="CharTimer" to="." method="_on_CharTimer_timeout"]
